--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     
-    <link href="{{ site.baseurl }}/css/bootswatch.min.css" rel="stylesheet">
+    <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ site.baseurl }}/css/style.css" rel="stylesheet">
 </head>
 <body>
