--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,8 +6,15 @@
     <link href="{{ site.baseurl }}/css/style.css" rel="stylesheet">
 </head>
 <body>
-    {{ content }}
-    
+    {% include header.html %}
+    <div class="container">
+        <div class="row">
+            <div class="col-md-7">{{ content }}</div>
+            <div class="col-md-1"></div>
+            <div class="col-md-4"> {% include sidebar.html %}</div>
+        </div>
+        {% include footer.html %}
+    </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
